--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,50 +31,50 @@ services:
     working_dir: /project
     restart: always
 
-  worker:
-    build: .
-    container_name: celery_worker_ex_vault
-    env_file:
-      - .env
-    command: celery -A src.celery_schedular.celery_worker worker --loglevel=info
-    working_dir: /project
-    environment:
-      - PYTHONPATH=/project/src
-    volumes:
-      - ./src:/project/src
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-
-  beat:
-    build: .
-    container_name: celery_worker_beat_ex_vault
-    env_file:
-      - .env
-    command: celery -A src.celery_schedular.celery_worker beat --loglevel=info --scheduler celery.beat:PersistentScheduler
-    working_dir: /project
-    environment:
-      - PYTHONPATH=/project/src
-    volumes:
-      - ./src:/project/src
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-
-  rabbitmq:
-    image: rabbitmq:3.12-management
-    container_name: rabbitmq_ex_vault
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: "${RABBITMQ_ADMIN_LOGIN:-admin}"
-      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_ADMIN_PASS:-adminpass}"
-    healthcheck:
-      test: [ "CMD", "rabbitmq-diagnostics", "ping" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+#  worker:
+#    build: .
+#    container_name: celery_worker_ex_vault
+#    env_file:
+#      - .env
+#    command: celery -A src.celery_schedular.celery_worker worker --loglevel=info
+#    working_dir: /project
+#    environment:
+#      - PYTHONPATH=/project/src
+#    volumes:
+#      - ./src:/project/src
+#    depends_on:
+#      rabbitmq:
+#        condition: service_healthy
+#
+#  beat:
+#    build: .
+#    container_name: celery_worker_beat_ex_vault
+#    env_file:
+#      - .env
+#    command: celery -A src.celery_schedular.celery_worker beat --loglevel=info --scheduler celery.beat:PersistentScheduler
+#    working_dir: /project
+#    environment:
+#      - PYTHONPATH=/project/src
+#    volumes:
+#      - ./src:/project/src
+#    depends_on:
+#      rabbitmq:
+#        condition: service_healthy
+#
+#  rabbitmq:
+#    image: rabbitmq:3.12-management
+#    container_name: rabbitmq_ex_vault
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#    environment:
+#      RABBITMQ_DEFAULT_USER: "${RABBITMQ_ADMIN_LOGIN:-admin}"
+#      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_ADMIN_PASS:-adminpass}"
+#    healthcheck:
+#      test: [ "CMD", "rabbitmq-diagnostics", "ping" ]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
 
 volumes:
   postgres_data:
