--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "aiogram (>=3.22.0,<4.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
-    "celery (>=5.5.3,<6.0.0)"
+    "celery (>=5.5.3,<6.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "matplotlib (>=3.10.6,<4.0.0)"
 ]
 
 
