--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,7 @@ services:
   db:
     image: postgres:17
     container_name: postgres_db_ex_vault
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
+
     restart: always
     env_file:
       - .env
@@ -23,9 +21,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
+
     env_file:
       - .env
     depends_on:
@@ -38,11 +34,11 @@ services:
     restart: always
 
   worker:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      network: host   # <-- добавляем это
     container_name: celery_worker_ex_vault
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
     env_file:
       - .env
     command: celery -A src.celery_schedular.celery_worker worker --loglevel=info
@@ -56,11 +52,11 @@ services:
         condition: service_healthy
 
   beat:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      network: host   # <-- добавляем это
     container_name: celery_worker_beat_ex_vault
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
     env_file:
       - .env
     command: celery -A src.celery_schedular.celery_worker beat --loglevel=info --scheduler celery.beat:PersistentScheduler
@@ -73,12 +69,11 @@ services:
       rabbitmq:
         condition: service_healthy
 
+
   rabbitmq:
     image: rabbitmq:3.12-management
     container_name: rabbitmq_ex_vault
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
+
     ports:
       - "5672:5672"
       - "15672:15672"
