--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-
+      network: host
     env_file:
       - .env
     depends_on:
