--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "alembic (>=1.16.5,<2.0.0)",
     "celery (>=5.5.3,<6.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "matplotlib (>=3.10.6,<4.0.0)"
+    "matplotlib (>=3.10.6,<4.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 
